[package]
name = "Balene_Search_Engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.16"
tokio = { version = "1.15", features = ["full"] }
serde = "1.0"
bincode = "1.3"